syntax = "proto3";

package example;

import "google/rpc/status.proto";
option go_package = "proto-golang/stock";

message Stock {
  string code = 1;
}

message StockSummary {
    string code = 1;
    int64 previous_price = 2;
    int64 open_price = 3;
    int64 highest_price = 4;
    int64 lowest_price = 5;
    int64 close_price = 6;
    int64 volume = 7;
    int64 value = 8;
    int64 average_price =9;
}

message Response {
  oneof response {
    google.rpc.Status error = 1;
    StockSummary summary = 2;
  }
}

service StockServer {
  rpc GetSummary(Stock) returns (Response);
}